force-app/main/default/objects/Vote__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <label>Idea</label>
    <referenceTo>Idea__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>