force-app/main/default/objects/Vote__c/fields/Vote_Type__c.field-meta.xml
<CustomField>
    <fullName>Vote_Type__c</fullName>
    <label>Vote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>